--- a/index.html
+++ b/index.html
@@ -76,17 +76,14 @@ layout: default
         <h1 class="scroll-fixer">Projects</h1>
         <ul>
           
-            
-
-
-
+        {% for post in site.posts %}
           <li class="one-project">
-            <img src="assets/images/Joana-Miranda-Portfolio-Project-Fernando-Pessoa@2x.png" srcset="assets/images/Joana-Miranda-Portfolio-Project-Fernando-Pessoa@2x.png 2x" alt="First portfolio project image with and illustration">
-            <h3>Redesign Website Casa-Museu Fernando Pessoa</h3>
-            <p>The project consisted in a redesign of a homepage and a page about the poet, after training some user-centred methodologies like surveys.</p>
-            <a href="https://www.behance.net/gallery/64733619/Redesign-Site-Casa-Fernando-Pessoa" target="_blank" class="button">View complete project</a>
+            <img src="{{ post.image }}" alt="#">
+            <h3>{{ post.title }}</h3>
+            <p>{{ post.content }}</p>
+            <a href="#">
           </li>
-
+        {% endfor %}
 
 
           <li class="one-project">
