--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ layout: default
           
         {% for post in site.posts %}
           <li class="one-project">
-            <img src="{{ post.image }}" alt="#">
+            <img src="{{ post.image }}" alt="{{ post.alt }}">
             <h3>{{ post.title }}</h3>
             <p>{{ post.content }}</p>
             <a href="{{ post.link }}" target="_blank" class="button">View complete project</a>
