Aplicar CSS Grid mobile first no container

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@ layout: default
         </figure>
       </section>
 
-      <section id="emphaty">
+      <section id="empathy">
         <h1 class="scroll-fixer">Emphaty Map - Me about me</h1>
-        <div class="post-its line-bottom line-right">
+        <div class="line-bottom line-right">
           <h2>Says</h2>
           <ul>
               <li>I want a new challenge</li>
@@ -45,7 +45,7 @@ layout: default
               <li>It only makes sense to create user-centered things</li>
             </ul>
           </div>
-        <div class="post-its line-bottom line-left">
+        <div class="line-bottom line-left">
           <h2>Thinks</h2>
           <ul>
               <li>It is essencial to be a good listener</li>
@@ -54,7 +54,7 @@ layout: default
               <li>I want to create things that make a difference in people's lives</li>
             </ul>
           </div>
-        <div class="post-its line-right line-top">
+        <div class="line-right line-top">
           <h2>Does</h2>
           <ul>
               <li>Read a lot of books</li>
@@ -62,7 +62,7 @@ layout: default
               <li>Listen, listen, listen</li>     
             </ul>
           </div>
-        <div class="post-its line-left line-top">
+        <div class="line-left line-top">
           <h2>Feels</h2>
           <ul>
               <li>Excited with new challenges</li>
