--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@ layout: default
         <h1 class="scroll-fixer">Emphaty Map - Me about me</h1>
         <div class="line-bottom line-right">
           <h2>Says</h2>
-          <ul>
-              <li>I want a new challenge</li>
-              <li>I like to make a difference</li>        
-              <li>I am extremely dedicated</li>
-              <li>It only makes sense to create user-centered things</li>
+          <ul class="empathy">
+              <li class="postit1">I want a new challenge</li>
+              <li class="postit2">I like to make a difference</li>        
+              <li class="postit3">I am extremely dedicated</li>
+              <li class="postit4">It only makes sense to create user-centered things</li>
             </ul>
           </div>
         <div class="line-bottom line-left">
@@ -72,10 +72,10 @@ layout: default
           </div>
       </section>
 
-      <section id="projects">
+      <section>
         <h1 class="scroll-fixer">Projects</h1>
        
-        <ul>
+        <ul class="projects">
           
         {% for post in site.posts %}
           <li class="one-project">
