Layout - CSS Grid + Flex

--- a/index.html
+++ b/index.html
@@ -48,26 +48,26 @@ layout: default
         <div class="line-bottom line-left">
           <h2>Thinks</h2>
           <ul>
-              <li>It is essencial to be a good listener</li>
+              <li class="postit5">It is essencial to be a good listener</li>
               <li>I want to create user-centered things</li>  
-              <li>I want to improve knowledge about best ways to know the user needs</li>
-              <li>I want to create things that make a difference in people's lives</li>
+              <li class="postit6">I want to improve knowledge about best ways to know the user needs</li>
+              <li class="postit7">I want to create things that make a difference in people's lives</li>
             </ul>
           </div>
         <div class="line-right line-top">
           <h2>Does</h2>
           <ul>
-              <li>Read a lot of books</li>
-              <li>Deeply analyse important things</li>      
-              <li>Listen, listen, listen</li>     
+              <li class="postit8">Read a lot of books</li>
+              <li class="postit9">Deeply analyse important things</li>      
+              <li class="postit10">Listen, listen, listen</li>     
             </ul>
           </div>
         <div class="line-left line-top">
           <h2>Feels</h2>
           <ul>
-              <li>Excited with new challenges</li>
-              <li>Motivated</li>        
-              <li>Passionate</li>
+              <li class="postit11">Excited with new challenges</li>
+              <li class="postit12">Motivated</li>    
+              <li class="postit13">Passionate</li>
             </ul>
           </div>
       </section>
