--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@ layout: default
       
       <section id="about">
         <h1>Introduction card - Others about me</h1>
-        <figure class="card">
+        <figure class="card1">
           <img src="assets/images/Joana-Miranda-Portfolio-Introdution-Card-Sofia@2x.png" srcset="assets/images/Joana-Miranda-Portfolio-Introdution-Card-Sofia@2x.png 2x" alt="Introcution card written by Sofia image">
           <figcaption>"Hardworking, rigorous and loyal." <strong>Sofia Paiva Raposo (art director)</strong></figcaption>
         </figure>
-        <figure class="card">
+        <figure class="card2">
           <img src="assets/images/Joana-Miranda-Portfolio-Introdution-Card-Teresa@2x.png" srcset="assets/images/Joana-Miranda-Portfolio-Introdution-Card-Teresa@2x.png 2x" alt="Introcution card written by Teresa image">
           <figcaption>"Meticulous, hardworking, rigorous, companion, creative, persistent, discreet… It's very easy to praise!" <strong>Teresa Roque de Pinho (colleague)</strong></figcaption>
         </figure>
-        <figure class="card">
+        <figure class="card3">
           <img src="assets/images/Joana-Miranda-Portfolio-Introdution-Card-Ines@2x.png" srcset="assets/images/Joana-Miranda-Portfolio-Introdution-Card-Ines@2x.png 2x" alt="Introcution card written by Ines image">
           <figcaption>"Joana is extremely organized, responsible and meticulous. She promotes good atmosphere at work and has a lot of creativity." <strong>Inês Fonseca (colleague)</strong></figcaption>
         </figure>
-        <figure class="card">
+        <figure class="card4">
           <img src="assets/images/Joana-Miranda-Portfolio-Introdution-Card-Claudia@2x.png" srcset="assets/images/Joana-Miranda-Portfolio-Introdution-Card-Claudia@2x.png 2x" alt="Introcution card written by Claudia image">
           <figcaption>"Very competent and prefectionist." <strong>Cláudia Rocha (colleague)</strong></figcaption>
         </figure>
