--- a/index.html
+++ b/index.html
@@ -41,32 +41,32 @@ layout: default
               <li class="postit1">I want a new challenge</li>
               <li class="postit2">I like to make a difference</li>        
               <li class="postit3">I am extremely dedicated</li>
-              <li class="postit4">It only makes sense to create user-centered things</li>
+              <li class="postit4">User-centered things</li>
             </ul>
           </div>
         <div class="line-bottom line-left">
           <h2>Thinks</h2>
           <ul>
-              <li class="postit5">It is essencial to be a good listener</li>
-              <li>I want to create user-centered things</li>  
-              <li class="postit6">I want to improve knowledge about best ways to know the user needs</li>
-              <li class="postit7">I want to create things that make a difference in people's lives</li>
+              <li class="postit5">Be a good listener</li>
+              <li class="postit6">User-centered things</li>  
+              <li class="postit7">Know the user needs</li>
+              <li class="postit8">Make a difference</li>
             </ul>
           </div>
         <div class="line-right line-top">
           <h2>Does</h2>
           <ul>
-              <li class="postit8">Read a lot of books</li>
-              <li class="postit9">Deeply analyse important things</li>      
-              <li class="postit10">Listen, listen, listen</li>     
+              <li class="postit9">Read a lot of books</li>
+              <li class="postit10">Deeply analyse things</li>
+              <li class="postit11">Listen, listen, listen</li>     
             </ul>
           </div>
         <div class="line-left line-top">
           <h2>Feels</h2>
           <ul>
-              <li class="postit11">Excited with new challenges</li>
-              <li class="postit12">Motivated</li>    
-              <li class="postit13">Passionate</li>
+              <li class="postit12">Excited with new challenges</li>
+              <li class="postit13">Motivated</li>    
+              <li class="postit14">Passionate</li>
             </ul>
           </div>
       </section>
