SASS - Colors + Type

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ layout: default
           </div>
       </section>
 
-      <section>
+      <section id="myprojects">
         <h1 class="scroll-fixer">Projects</h1>
        
         <ul class="projects">
