Mixins - Type + Margins

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ layout: default
         <ul class="projects">
 
         {% for post in site.posts %}
-          <li class="{{ post.class }}">
+          <li class="one-project">
             <img src="{{ post.image }}" alt="{{ post.alt }}">
             <h3>{{ post.title }}</h3>
             <p>{{ post.content }}</p>
