Correções Grid Empathy + Optimização Mixins

--- a/index.html
+++ b/index.html
@@ -34,39 +34,43 @@ layout: default
       </section>
 
       <section id="empathy">
-        <h1 class="scroll-fixer">Emphaty Map - Me about me</h1>
-        <div class="line-bottom line-right">
+        <h1 class="scroll-fixer">Empathy Map - Me about me</h1>
+        <div class="says vertical-line">
+          <hr>
           <h2>Says</h2>
-          <ul class="empathy">
-              <li class="postit1">I want a new challenge</li>
-              <li class="postit2">I like to make a difference</li>
-              <li class="postit3">I am extremely dedicated</li>
-              <li class="postit4">User-centered things</li>
+          <ul>
+              <li>I want a new challenge</li>
+              <li>I like to make a difference</li>
+              <li>I am extremely dedicated</li>
+              <li>User-centered things</li>
             </ul>
           </div>
-        <div class="line-bottom line-left">
+        <div class="thinks">
+          <hr>
           <h2>Thinks</h2>
           <ul>
-              <li class="postit5">Be a good listener</li>
-              <li class="postit6">User-centered things</li>
-              <li class="postit7">Know the user needs</li>
-              <li class="postit8">Make a difference</li>
+              <li>Be a good listener</li>
+              <li>User-centered things</li>
+              <li>Know the user needs</li>
+              <li>Make a difference</li>
             </ul>
           </div>
-        <div class="line-right line-top">
+        <div class="does vertical-line">
+          <hr>
           <h2>Does</h2>
           <ul>
-              <li class="postit9">Read a lot of books</li>
-              <li class="postit10">Deeply analyse things</li>
-              <li class="postit11">Listen, listen, listen</li>
+              <li>Read a lot of books</li>
+              <li>Deeply analyse things</li>
+              <li>Listen, listen, listen</li>
             </ul>
           </div>
-        <div class="line-left line-top">
+        <div class="feels">
+          <hr>
           <h2>Feels</h2>
           <ul>
-              <li class="postit12">Excited with new challenges</li>
-              <li class="postit13">Motivated</li>
-              <li class="postit14">Passionate</li>
+              <li>Excited with new challenges</li>
+              <li>Motivated</li>
+              <li>Passionate</li>
             </ul>
           </div>
       </section>
@@ -86,9 +90,7 @@ layout: default
         {% endfor %}
 
         </ul>
-
       </section>
-
 
       <section id="education">
         <h1 class="scroll-fixer">Education</h1>
