--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-    <section id="whys">
+      <section id="whys">
         <div class="text-block">
           <h1>5 whys I wanna be a UX designer</h1>
           <h3><em>Why?</em> I always fall in love with the problem.</h3>
@@ -11,6 +11,7 @@ layout: default
           <h3><em>Why?</em> To make people's lives better.</h3>
           <h3><em>Why?</em> Because I believe that’s why design exists.</h3>
         </div>
+        <div class="mouse"></div>
       </section>
 
       <section id="about">
