Inserção de conteúdo

--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@ layout: default
         <h1 class="scroll-fixer">Contacts</h1>
         <ul>
           <li><i class="fas fa-envelope"></i><a href="mailto:joana.miranda25@gmail.com">joana.miranda25@gmail.com</a></li>
-          <li><i class="fab fa-linkedin-in"></i><a href="https://www.linkedin.com/in/joana-miranda-aa89863b/" target="_blank">Linkedin</a></li>
-          <li><i class="fab fa-medium-m"></i><a href="https://medium.com/@joana.miranda25" target="_blank">Medium</a></li>
-          <li><i class="fab fa-behance"></i><a href="https://www.behance.net/joanamiran4db5" target="_blank">Behance</a>
+          <li><i class="fab fa-linkedin-in"></i><a href="https://www.linkedin.com/in/joanamiranda88/" target="_blank">Linkedin</a></li>
+          <li><i class="fab fa-medium-m"></i><a href="https://medium.com/@joanamiranda88" target="_blank">Medium</a></li>
+          <li><i class="fab fa-behance"></i><a href="https://www.behance.net/joanamiranda88" target="_blank">Behance</a>
           </li>
           </ul>
       </section>
