--- a/contact.html
+++ b/contact.html
@@ -2,22 +2,21 @@
 layout: default
 ---
 
+<h2>Let's talk!</h2>
+
 <form action="//formspree.io/joana.miranda25@gmail.com" method="POST" target="_blank" autocomplete="on">
-
   <fieldset class="form">
-    <legend>Let's talk!</legend>
-      <p>
-        <label for="Name">Name</label>
-        <input id="Name" type="text" required>
-      </p>
-      <p>
-        <label for="Email">Email</label>
-        <input id="Email" type="email" required></p>
-      <p>
-        <label for="Message">Message</label>
-        <input id="Message" type="text" required>
-      </p>
-      <input type="submit" value="Send">
+    <p>
+      <label for="Name">Name</label>
+      <input id="Name" type="text" required>
+    </p>
+    <p>
+      <label for="Email">Email</label>
+      <input id="Email" type="email" required></p>
+    <p>
+      <label for="Message">Message</label>
+      <input id="Message" type="text" required>
+    </p>
+    <input type="submit" value="Send" class="button">
   </fieldset>
-
 </form>
