Inserção de conteúdo + Correções

--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@ layout: default
       <section id="about">
         <h1>Introduction card - Others about me</h1>
         <figure class="card">
-          <img src="/assets/images/Joana-Miranda-Portfolio-Introdution-Card-Sofia@2x.png" srcset="assets/images/Joana-Miranda-Portfolio-Introdution-Card-Sofia@2x.png 2x" alt="Introcution card written by Sofia image">
+          <img src="/assets/images/Joana-Miranda-Portfolio-Introdution-Card-Sofia@2x.png" srcset="assets/images/Joana-Miranda-Portfolio-Introdution-Card-Sofia@2x.png 2x" alt="Introcution card written by Sofia">
           <figcaption>"Hardworking, rigorous and loyal." <strong>Sofia Paiva Raposo (art director)</strong></figcaption>
         </figure>
         <figure class="card">
-          <img src="/assets/images/Joana-Miranda-Portfolio-Introdution-Card-Teresa@2x.png" srcset="assets/images/Joana-Miranda-Portfolio-Introdution-Card-Teresa@2x.png 2x" alt="Introcution card written by Teresa image">
+          <img src="/assets/images/Joana-Miranda-Portfolio-Introdution-Card-Teresa@2x.png" srcset="assets/images/Joana-Miranda-Portfolio-Introdution-Card-Teresa@2x.png 2x" alt="Introcution card written by Teresa">
           <figcaption>"Meticulous, hardworking, rigorous, companion, creative, persistent, discreet… It's very easy to praise!" <strong>Teresa Roque de Pinho (colleague)</strong></figcaption>
         </figure>
         <figure class="card">
-          <img src="/assets/images/Joana-Miranda-Portfolio-Introdution-Card-Ines@2x.png" srcset="assets/images/Joana-Miranda-Portfolio-Introdution-Card-Ines@2x.png 2x" alt="Introcution card written by Ines image">
+          <img src="/assets/images/Joana-Miranda-Portfolio-Introdution-Card-Ines@2x.png" srcset="assets/images/Joana-Miranda-Portfolio-Introdution-Card-Ines@2x.png 2x" alt="Introcution card written by Ines">
           <figcaption>"Joana is extremely organized, responsible and meticulous. She promotes good atmosphere at work and has a lot of creativity." <strong>Inês Fonseca (colleague)</strong></figcaption>
         </figure>
         <figure class="card">
-          <img src="/assets/images/Joana-Miranda-Portfolio-Introdution-Card-Claudia@2x.png" srcset="assets/images/Joana-Miranda-Portfolio-Introdution-Card-Claudia@2x.png 2x" alt="Introcution card written by Claudia image">
+          <img src="/assets/images/Joana-Miranda-Portfolio-Introdution-Card-Claudia@2x.png" srcset="assets/images/Joana-Miranda-Portfolio-Introdution-Card-Claudia@2x.png 2x" alt="Introcution card written by Claudia">
           <figcaption>"Very competent and prefectionist." <strong>Cláudia Rocha (colleague)</strong></figcaption>
         </figure>
       </section>
@@ -43,17 +43,17 @@ layout: default
               <li>I want a new challenge</li>
               <li>I like to make a difference</li>
               <li>I am extremely dedicated</li>
-              <li>User-centered things</li>
+              <li>It only makes sense to create user-centered things</li>
             </ul>
           </div>
         <div class="thinks">
           <hr>
           <h2>Thinks</h2>
           <ul>
-              <li>Be a good listener</li>
-              <li>User-centered things</li>
-              <li>Know the user needs</li>
-              <li>Make a difference</li>
+              <li>It is essencial to be a good listener</li>
+              <li>I want to create user-centered things</li>
+              <li>I want to improve knowledge about best ways to know the user needs</li>
+              <li>I want to create things that make a difference in people's lives</li>
             </ul>
           </div>
         <div class="does vertical-line">
@@ -61,10 +61,10 @@ layout: default
           <h2>Does</h2>
           <ul>
               <li>Read a lot of books</li>
-              <li>Deeply analyse things</li>
+              <li>Deeply analyse important things</li>
               <li>Listen, listen, listen</li>
-            </ul>
-          </div>
+          </ul>
+        </div>
         <div class="feels">
           <hr>
           <h2>Feels</h2>
@@ -72,13 +72,12 @@ layout: default
               <li>Excited with new challenges</li>
               <li>Motivated</li>
               <li>Passionate</li>
-            </ul>
-          </div>
+          </ul>
+        </div>
       </section>
 
       <section id="myprojects">
         <h1 class="scroll-fixer">Projects</h1>
-
         <ul class="projects">
 
         {% for post in site.posts %}
@@ -95,10 +94,10 @@ layout: default
       <section id="education">
         <h1 class="scroll-fixer">Education</h1>
         <ol>
-            <li><strong>2006-2009</strong> -  Bachelor in Communication Design at FBAUL (Lisbon's Faculty of Fine-Arts)</li>
-            <li><strong>2009-2011</strong> -  Master in Communication Design at FAL (Lisbon's Faculty of Architecture)</li>
+            <li><strong>2006-2009</strong> - Bachelor in Communication Design at FBAUL (Lisbon's Faculty of Fine-Arts)</li>
+            <li><strong>2009-2011</strong> - Master in Communication Design at FAL (Lisbon's Faculty of Architecture)</li>
             <li><strong>2018</strong> - Intensive Course in User Experience & User Interface Design at EDIT Lisbon</li>
-            <li><strong>2018-2019</strong> -  Post Graduation in Digital Experience Design</li>
+            <li><strong>2018-2019</strong> - Post Graduation in Digital Experience Design</li>
           </ol>
       </section>
 
@@ -110,5 +109,5 @@ layout: default
           <li><i class="fab fa-medium-m"></i><a href="https://medium.com/@joanamiranda88" target="_blank">Medium</a></li>
           <li><i class="fab fa-behance"></i><a href="https://www.behance.net/joanamiranda88" target="_blank">Behance</a>
           </li>
-          </ul>
+        </ul>
       </section>
